--- a/Front End/HuyNQ/Source/job.html
+++ b/Front End/HuyNQ/Source/job.html
@@ -8,197 +8,47 @@
     <link rel="shortcut icon" href="https://cdn.worldvectorlogo.com/logos/bootstrap-4.svg" type="image/x-icon">
     <link rel="stylesheet" href="plugin/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="plugin/fontawesome/css/all.min.css">
-    <link rel="stylesheet" href="css/t_style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-    <header class="container">
-        <a href="index.html"><img class="logo" src="images/Logo.png" alt=""></a>
-        <nav>
-            <ul>
-                <li>
-                    <a href="index.html">Trang Chủ</a>
-                </li>
-                <li>
-                    <a href="#">Giới Thiệu</a>
-                </li>
-                <li>
-                    <a href="#">Góc Nghề Nghiệp</a>
-                </li>
-                <li>
-                    <a href="contact.html">Liên Hệ</a>
-                </li>
-                <li>
-                    <a href="#" class="menu-button">Tài Khoản</a>
-                </li>
-            </ul>
+    <header>
+        <nav class="container navbar navbar-expand-lg navbar-light">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo.png" width="250" alt="Logo Tìm Việc Làm">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <form class="form-inline ml-auto">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <div class="form-inline my-2 my-lg-0 navbar-nav font-weight-normal font-header">
+                            <li class="nav-item">
+                                <a class="nav-link" href="job.html"><i class="fas fa-blog mr-2 icon-menu"></i> GÓC NGHỀ NGHIỆP
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"><i class="fas fa-lock mr-2 icon-menu"></i> ĐĂNG NHẬP </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#"><i class="fas fa-user mr-2 icon-menu"></i> ĐĂNG KÝ </a>
+                            </li>
+                            <div class="dropdown-menu-top">
+                                <li class="nav-item dropdown btn btn-bd-submit mb-3 mb-md-0 ml-md-3">
+                                    <a class="text-white p-2" href="#">NHÀ TUYỂN DỤNG</a>
+                                </li>
+                            </div>
+                        </div>
+                </form>
+            </div>
         </nav>
     </header>
+
     <!-- Tìm Kiếm Việc Làm -->
-    <div class="background-search-job">
-        <div class="container">
-            <div class="row search-job ml-1">
-                <div class="col-4 mt-3 my-0 px-1">
-                    <span class="ctn-icon1"> <i class="fa fa-briefcase" aria-hidden="true"></i></span>
-                    <input class="form-control search-job__input-name ui-autocomplete-input" value=""
-                        placeholder="Tên công việc, vị trí bạn muốn..." id="keyword" autocomplete="off">
-                </div>
-                <div class="col-3 mt-3 px-1">
-                    <span class="ctn-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
 
-                    <select class="form-control search-job__input-location" id="select-state">
-                        <option value="">Tất cả địa điểm</option>
-                        <option value="1">Hà Nội</option>
-                        <option value="2">Hồ Chí Minh</option>
-                        <option value="3">Bình Dương</option>
-                        <option value="4">Bắc Ninh</option>
-                        <option value="5">Đồng Nai</option>
-                        <option value="6">Hưng Yên</option>
-                        <option value="7">Hải Dương</option>
-                        <option value="8">Đà Nẵng</option>
-                        <option value="9">Hải Phòng</option>
-                        <option value="10">An Giang</option>
-                        <option value="11">Bà Rịa-Vũng Tàu</option>
-                        <option value="12">Bắc Giang</option>
-                        <option value="13">Bắc Kạn</option>
-                        <option value="14">Bạc Liêu</option>
-                        <option value="15">Bến Tre</option>
-                        <option value="16">Bình Định</option>
-                        <option value="17">Bình Phước</option>
-                        <option value="18">Bình Thuận</option>
-                        <option value="19">Cà Mau</option>
-                        <option value="20">Cần Thơ</option>
-                        <option value="21">Cao Bằng</option>
-                        <option value="22">Cửu Long</option>
-                        <option value="23">Đắc Lắc</option>
-                        <option value="24">Đắc Nông</option>
-                        <option value="25">Điện Biên</option>
-                        <option value="26">Đồng Tháp</option>
-                        <option value="27">Gia Lai</option>
-                        <option value="28">Hà Giang</option>
-                        <option value="29">Hà Nam</option>
-                        <option value="30">Hà Tĩnh</option>
-                        <option value="31">Hậu Giang</option>
-                        <option value="32">Hoà Bình</option>
-                        <option value="33">Khánh Hoà</option>
-                        <option value="34">Kiên Giang</option>
-                        <option value="35">Kon Tum</option>
-                        <option value="36">Lai Châu</option>
-                        <option value="37">Lâm Đồng</option>
-                        <option value="38">Lạng Sơn</option>
-                        <option value="39">Lào Cai</option>
-                        <option value="40">Long An</option>
-                        <option value="41">Miền Bắc</option>
-                        <option value="42">Miền Nam</option>
-                        <option value="43">Miền Trung</option>
-                        <option value="44">Nam Định</option>
-                        <option value="45">Nghệ An</option>
-                        <option value="46">Ninh Bình</option>
-                        <option value="47">Ninh Thuận</option>
-                        <option value="48">Phú Thọ</option>
-                        <option value="49">Phú Yên</option>
-                        <option value="50">Quảng Bình</option>
-                        <option value="51">Quảng Nam</option>
-                        <option value="52">Quảng Ngãi</option>
-                        <option value="53">Quảng Ninh</option>
-                        <option value="54">Quảng Trị</option>
-                        <option value="55">Sóc Trăng</option>
-                        <option value="56">Sơn La</option>
-                        <option value="57">Tây Ninh</option>
-                        <option value="58">Thái Bình</option>
-                        <option value="59">Thái Nguyên</option>
-                        <option value="60">Thanh Hoá</option>
-                        <option value="61">Thừa Thiên Huế</option>
-                        <option value="62">Tiền Giang</option>
-                        <option value="63">Toàn Quốc</option>
-                        <option value="64">Trà Vinh</option>
-                        <option value="65">Tuyên Quang</option>
-                        <option value="66">Vĩnh Long</option>
-                        <option value="67">Vĩnh Phúc</option>
-                        <option value="68">Yên Bái</option>
-                        <option value="100">Nước Ngoài</option>
-                    </select>
-                </div>
-                <div class="col-3 mt-3 px-1">
-                    <span class="ctn-icon"><i class="fa fa-wrench" aria-hidden="true"></i></span>
-                    <select class="form-control search-job__input-categories">
-                        <option value="">Tất cả ngành nghề</option>
-                        <option value="10101">An toàn lao động</option>
-                        <option value="10102">Bán hàng kỹ thuật</option>
-                        <option value="10103">Bán lẻ / bán sỉ</option>
-                        <option value="10004">Báo chí / Truyền hình</option>
-                    </select>
-                </div>
-                <div class="col-2 mt-3 px-1">
-                    <span class="ctn-icon text-white pl-2 search-job--input"><i class="fa fa-search"
-                            aria-hidden="true"></i></span>
-                    <button type="submit" class="form-control search-job__input-submit btn btn-block btn-warning">Tìm
-                        Kiếm</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Tìm Kiếm Nâng Cao -->
-        <div class="tittle-search">
-            <span id="btn-show-advanced-search" data-toggle="collapse" data-target="#emoji">
-                <i class="fa fa-angle-down"></i>
-                Chọn tìm kiếm nâng cao
-            </span>
-        </div>
-        <div class="box collapse container" id="emoji">
-            <div class="row search-job ml-1">
-                <div class="col-3 mt-2 mb-3 px-1">
-                    <span class="ctn-icon"><i class="fas fa-money-bill"></i></span>
-                    <select class="form-control search-job__input-location">
-                        <option value="">Tất cả mức lương</option>
-                        <option value="1">Dưới 3 triệu</option>
-                        <option value="2">3 - 5 triệu</option>
-                        <option value="3">5 - 7 Triệu</option>
-                        <option value="4">7 - 10 Triệu</option>
-                        <option value="5">12 - 15 Triệu</option>
-                        <option value="6">15 - 20 Triệu</option>
-                        <option value="7">20 - 30 Triệu</option>
-                        <option value="8">Trên 30 Triệu</option>
-                        <option value="9">Thỏa thuận</option>
-                    </select>
-                </div>
-                <div class="col-3 mt-2 mb-3 px-1">
-                    <span class="ctn-icon"><i class="far fa-chart-bar"></i></span>
-                    <select class="form-control search-job__input-location">
-                        <option value="">Tất cả kinh nghiệm</option>
-                        <option value="1">Chưa có</option>
-                        <option value="2">Dưới 1 năm</option>
-                        <option value="3"> 1 năm </option>
-                        <option value="4"> 2 năm </option>
-                        <option value="5"> 3 năm </option>
-                        <option value="6"> 4 năm </option>
-                        <option value="7"> 5 năm </option>
-                        <option value="8"> Trên 5 năm </option>
-                    </select>
-                </div>
-                <div class="col-3 mt-2 mb-3 px-1">
-                    <span class="ctn-icon"><i class="fas fa-user-clock"></i></span>
-                    <select class="form-control search-job__input-categories">
-                        <option value="">Hình thức làm việc</option>
-                        <option value="10101"> Toàn thời gian </option>
-                        <option value="10102"> Bán thời gian </option>
-                        <option value="10103"> Thực tập sinh </option>
-                        <option value="10004"> Remote - Làm việc từ xa </option>
-                    </select>
-                </div>
-                <div class="col-3 mt-2 mb-3 px-1">
-                    <span class="ctn-icon"><i class="fas fa-city"></i></span>
-                    <select class="form-control search-job__input-categories">
-                        <option value="">Tất cả lĩnh vực</option>
-                        <option value="10101"> Agency (Design/Development) </option>
-                        <option value="10102"> Agency (Marketing/Advertising) </option>
-                        <option value="10103"> Bán lẻ - Hàng tiêu dùng - FMCG </option>
-                        <option value="10004"> Bât động sản </option>
-                    </select>
-                </div>
-            </div>
-        </div>
-    </div>
     <!-- Vị trí -->
     <section>
         <div class="container">
