--- a/Front End/ThinhNQ/Source/job-detail.html
+++ b/Front End/ThinhNQ/Source/job-detail.html
@@ -414,7 +414,7 @@
                             <!-- Nộp ứng tuyển -->
                             <div class="job-detail-bottom sticky">
                                 <div class="job-detail-bottom-wrapper">
-                                    <div class="apply-now-content">
+                                    <div class="appy-now-content">
                                         <div class="job-desc">
                                             <a href="#"><i class="far fa-envelope-open icon-detail"></i><span
                                                     class="text">Gửi tôi việc làm tương tự</span></a>
