--- a/Front End/ThinhNQ/home-ntd.html
+++ b/Front End/ThinhNQ/home-ntd.html
@@ -95,12 +95,12 @@
 
       <div class="row mt-5">
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 txr">
-          <a href="#" class="">
+          <a href="banggia.html" class="">
             <button type="button" class="el-button btn-block mb-n mt-10 post-news">
               <span>Đăng Tin tuyển dụng</span></button></a>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-          <a href="#" class=""><button type="button"
+          <a href="banggia.html" class=""><button type="button"
               class="el-button btn-block mb-n mt-10 el-button--primary selective-uv">
               <span>Lọc hồ sơ ứng viên</span></button></a>
         </div>
